--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon server.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint . --ext .js",
-    "lint:fix": "eslint . --ext .js --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "db:setup": "node scripts/setup-mongodb.js",
     "db:seed": "node scripts/seed-data.js",
     "db:clean": "node scripts/clean-database.js",
