corrigindo bugs no backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,28 @@
     "dev": "nodemon server.js",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "db:setup": "node scripts/setup-mongodb.js",
-    "db:seed": "node scripts/seed-data.js",
-    "db:clean": "node scripts/clean-database.js",
-    "db:migrate": "node scripts/migrate-database.js",
-    "rpg:setup": "node scripts/setup-rpg-system.js",
+    "security:check": "npm audit && npm run lint",
+    "security:audit": "npm audit --audit-level moderate",
+    "security:fix": "npm audit fix",
+    "db:setup": "node scripts/setup/setup-mongodb.js",
+    "db:seed": "node scripts/setup/seed-data.js",
+    "db:clean": "node scripts/database/clean-database.js",
+    "db:migrate": "node scripts/database/migrate-database.js",
+    "db:backup": "node scripts/database/backup-database.js",
+    "db:check": "node scripts/database/check-databases.js",
+    "db:test": "node scripts/database/test-connection.js",
+    "rpg:setup": "node scripts/setup/setup-rpg-system.js",
     "seed": "node src/seeders/index.js",
     "test:connection": "node src/utils/database/connectionTester.js",
     "check:config": "node src/utils/validation/configValidator.js",
+    "check:security": "node src/utils/security/securityChecker.js",
+    "logs:security": "tail -f logs/security.log",
+    "logs:error": "tail -f logs/error.log",
+    "logs:clean": "rm -rf logs/*.log",
+    "production:check": "npm run security:check && npm run check:config",
     "demo:reset": "node src/utils/maintenance/demoUserManager.js"
   },
   "keywords": [
@@ -39,6 +51,8 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
+    "@sentry/node": "^10.25.0",
+    "@sentry/tracing": "^7.120.4",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
@@ -57,8 +71,9 @@
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.10.1",
-    "pdfkit": "^0.17.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.9",
+    "pdfkit": "^0.13.0",
     "stripe": "^14.5.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
