--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,36 +6,47 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:production": "vite build --mode production",
+    "build:analyze": "npm run build && npx vite-bundle-analyzer",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview",
+    "security:check": "npm audit && npm run lint",
+    "security:audit": "npm audit --audit-level moderate",
+    "security:fix": "npm audit fix",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf dist node_modules/.cache",
+    "serve": "vite preview --port 3000"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.13",
-    "@mui/lab": "^5.0.0-alpha.61",
-    "@mui/material": "^5.14.13",
-    "@mui/x-charts": "^6.19.0",
-    "axios": "^1.6.2",
-    "chart.js": "^4.4.0",
-    "date-fns": "^2.30.0",
-    "phaser": "^3.55.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "@mui/material": "^5.15.10",
+    "@mui/x-charts": "^6.19.5",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^12.23.24",
+    "phaser": "^3.70.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.16.0",
-    "recharts": "^2.10.3",
-    "sweetalert2": "^11.7.32"
+    "react-router-dom": "^6.21.3",
+    "recharts": "^2.15.4",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
-    "@vitejs/plugin-react": "^4.1.0",
-    "eslint": "^8.51.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.11"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^7.2.2"
   }
 }
