--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ node_modules/
 .env.*.local
 .env.development.local
 .env.test.local
-.env.production.local
+.env.production.
+.env.example
 
 # Logs
 logs
