--- a/backend/package.json
+++ b/backend/package.json
@@ -62,7 +62,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
-    "express-validator": "^7.0.1",
+    "express-validator": "^7.3.0",
     "helmet": "^7.2.0",
     "joi": "^17.11.0",
     "json2csv": "^6.0.0-alpha.2",
@@ -71,6 +71,7 @@
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^7.0.10",
     "pdfkit": "^0.13.0",
