--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:auto": "node dev-start.js",
+    "dev:auto:cjs": "node dev-start.cjs",
+    "dev:network": "vite --host",
+    "dev:local": "vite --host localhost",
+    "dev:safe": "vite --host localhost --port 5173",
     "build": "vite build",
     "build:production": "vite build --mode production",
     "build:analyze": "npm run build && npx vite-bundle-analyzer",
@@ -21,6 +26,7 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "test:watch": "vitest --watch",
+    "test:websocket": "node test-websocket.js",
     "docker:dev": "docker build --target development -t despfinancee-frontend:dev .",
     "docker:prod": "docker build --target production -t despfinancee-frontend:prod .",
     "docker:run:dev": "docker run -p 5173:5173 despfinancee-frontend:dev",
