--- a/backend/.env.example
+++ b/backend/.env.example
@@ -44,8 +44,11 @@ STRIPE_SECRET_KEY=sk_test_seu_secret_key_aqui
 STRIPE_WEBHOOK_SECRET=whsec_seu_webhook_secret_aqui
 
 # MercadoPago (PIX, Transferência, Crédito)
-MERCADOPAGO_ACCESS_TOKEN=APP_USR-seu_access_token_aqui
-MERCADOPAGO_PUBLIC_KEY=APP_USR-seu_public_key_aqui
+MERCADO_PAGO_ACCESS_TOKEN=APP_USR-
+MERCADO_PAGO_PUBLIC_KEY=APP
+MERCADO_PAGO_WEBHOOK_SECRET=seu_webhook_secret_aqui
+# URLs de retorno
+BACKEND_URL=http://localhost:3001
 
 # ============================================
 # 🌐 Frontend Configuration
