--- a/.gitignore
+++ b/.gitignore
@@ -28,12 +28,18 @@ config/.env.frontend
 .envrc
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+backend/logs/*.log
+!backend/logs/README.md
+
+# Exports temporários
+backend/exports/*
+!backend/exports/.gitkeep
 
 # Arquivo de lock (opcional - comentar se quiser manter)
 # package-lock.json
@@ -41,9 +47,14 @@ lerna-debug.log*
 
 # Diretórios de build/dist
 dist/
+dist-ssr/
 build/
 .next/
 out/
+
+# Arquivos de teste em public
+frontend/public/test-*.html
+backend/public/test-*.html
 
 # IDE
 .vscode/
@@ -67,6 +78,12 @@ coverage/
 temp/
 tmp/
 *.tmp
+*.bak
+*.backup
+*.old
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
