--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^12.23.24",
     "phaser": "^3.70.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.4.0",
